ISSUE #463 - Visibility toggling for target models

--- a/frontend/components/compare/css/compare.css
+++ b/frontend/components/compare/css/compare.css
@@ -31,6 +31,7 @@ compare .compareButton {
 
 compare .compareVisibility {
     margin-right: 15px;
+    min-width: initial;
 }
 
 compare .compareModel:hover {
